# aup-learning-cloud-case-hub

./: CONTRIBUTING.md  CONTRIBUTING_ZH.md  README.md  README_ZH.md
.github/: pull_request_template.md
cases/2026-03-njupt-winter-battle/: README.md  README_ZH.md
cases/2026-03-njupt-winter-battle/01-gold-liuhuayaxi-smart-paper-qa-assistant/: README.md  README_ZH.md  main_zh.ipynb  requirements.txt
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/: README.md  README_ZH.md  pyproject.toml
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/jupypilot/: types.py
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/jupypilot/llm/: backoff.py  ollama_client.py
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/jupypilot/orchestrator/: memory.py  orchestrator.py  policy_guard.py  prompt_registry.py  tool_loop.py  validator.py
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/jupypilot/rag/: build_index.py  retriever.py
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/jupypilot/ui/panels/: chat_panel.py
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/prompts/: code_qa_v1-3.md  testgen_v1-3.md
cases/2026-03-njupt-winter-battle/02-silver-wabibabo-jupypilot/scripts/: self_check.py
cases/2026-03-njupt-winter-battle/03-bronze-ColdCode-smart-coding-assistant-for-beginners/: README.md  README_ZH.md  main.ipynb  main_zh.ipynb  requirements.txt
template/: README.md  README_ZH.md  main.ipynb  main_zh.ipynb  requirements.txt
(+291 files in other folders)
