[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jupypilot"
version = "0.1.0"
description = "JupyterHub + ipywidgets LLM engineering assistant powered by Ollama."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipywidgets>=8.1",
  "requests>=2.31",
]

[project.optional-dependencies]
# 用 run.py 启动 UI 时二选一安装
ui = ["notebook>=7"]   # 或 pip install voila 用 voila 启动

[tool.setuptools.packages.find]
where = ["."]
include = ["jupypilot*"]
